--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" >
     <application
-        android:label="vp_chretien"
+        android:label="VP - CHRÉTIENS DE BÉRÉE"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
